--- a/serverless.yml
+++ b/serverless.yml
@@ -58,3 +58,13 @@ functions:
           method: get
           cors: true
           authorizer: aws_iam
+
+  list:
+    handler: list.main
+    events:
+      - http:
+          path: notes
+          method: get
+          cors: true
+          authorizer: aws_iam
+          
