--- a/serverless.yml
+++ b/serverless.yml
@@ -68,3 +68,11 @@ functions:
           cors: true
           authorizer: aws_iam
           
+  update:
+    handler: update.main
+    events: 
+      - http:
+          path: notes/{id}
+          method: put
+          cors: true
+          authorizer: aws_iam
